优化完成配置项配置功能

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-useless-escape": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
