--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     ],
     "rules": {
       "no-console": "off",
-      "no-useless-escape": "off"
+      "no-useless-escape": "off",
+      "no-unused-vars": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
